crates/cronet-sys/include/cronet_rs_dev.h

typedef const char* Cronet_String;
typedef void* Cronet_ClientContext;
typedef struct Cronet_Engine* Cronet_EnginePtr;
typedef struct Cronet_EngineParams* Cronet_EngineParamsPtr;
typedef struct Cronet_UrlRequest* Cronet_UrlRequestPtr;
typedef struct Cronet_UrlRequestCallback* Cronet_UrlRequestCallbackPtr;
typedef struct Cronet_Executor* Cronet_ExecutorPtr;
typedef struct Cronet_Buffer* Cronet_BufferPtr;
typedef struct Cronet_UrlRequestStatusListener* Cronet_UrlRequestStatusListenerPtr;
typedef struct Cronet_UploadDataSink* Cronet_UploadDataSinkPtr;
typedef struct Cronet_Runnable* Cronet_RunnablePtr;
typedef struct Cronet_UrlResponseInfo* Cronet_UrlResponseInfoPtr;
typedef struct Cronet_Error* Cronet_ErrorPtr;
typedef enum Cronet_RESULT {
  Cronet_RESULT_SUCCESS = 0,
  Cronet_RESULT_ILLEGAL_ARGUMENT = -100,
  Cronet_RESULT_ILLEGAL_ARGUMENT_STORAGE_PATH_MUST_EXIST = -101,
  Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_PIN = -102,
  Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_HOSTNAME = -103,
  Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_HTTP_METHOD = -104,
  Cronet_RESULT_ILLEGAL_ARGUMENT_INVALID_HTTP_HEADER = -105,
  Cronet_RESULT_ILLEGAL_STATE = -200,
  Cronet_RESULT_ILLEGAL_STATE_STORAGE_PATH_IN_USE = -201,
  Cronet_RESULT_ILLEGAL_STATE_CANNOT_SHUTDOWN_ENGINE_FROM_NETWORK_THREAD = -202,
  Cronet_RESULT_ILLEGAL_STATE_ENGINE_ALREADY_STARTED = -203,
  Cronet_RESULT_ILLEGAL_STATE_REQUEST_ALREADY_STARTED = -204,
  Cronet_RESULT_ILLEGAL_STATE_REQUEST_NOT_INITIALIZED = -205,
  Cronet_RESULT_ILLEGAL_STATE_REQUEST_ALREADY_INITIALIZED = -206,
  Cronet_RESULT_ILLEGAL_STATE_REQUEST_NOT_STARTED = -207,
  Cronet_RESULT_NULL_POINTER = -300,
  Cronet_RESULT_NULL_POINTER_HOSTNAME = -301,
  Cronet_RESULT_NULL_POINTER_SHA256_PINS = -302,
  Cronet_RESULT_NULL_POINTER_EXPIRATION_DATE = -303,
  Cronet_RESULT_NULL_POINTER_ENGINE = -304,
  Cronet_RESULT_NULL_POINTER_URL = -305,
  Cronet_RESULT_NULL_POINTER_CALLBACK = -306,
  Cronet_RESULT_NULL_POINTER_EXECUTOR = -307
} Cronet_RESULT;
typedef int32_t Cronet_UrlRequestStatusListener_Status;
typedef void (*Cronet_UrlRequestStatusListener_OnStatusFunc)(
    Cronet_UrlRequestStatusListenerPtr, Cronet_UrlRequestStatusListener_Status);
Cronet_UrlRequestStatusListenerPtr Cronet_UrlRequestStatusListener_CreateWith(
    Cronet_UrlRequestStatusListener_OnStatusFunc);
void Cronet_UrlRequestStatusListener_Destroy(Cronet_UrlRequestStatusListenerPtr);
void Cronet_UrlRequestStatusListener_SetClientContext(
    Cronet_UrlRequestStatusListenerPtr, Cronet_ClientContext);
Cronet_ClientContext Cronet_UrlRequestStatusListener_GetClientContext(
    Cronet_UrlRequestStatusListenerPtr);
Cronet_EnginePtr Cronet_Engine_Create(void);
void Cronet_Engine_Destroy(Cronet_EnginePtr);
Cronet_RESULT Cronet_Engine_StartWithParams(Cronet_EnginePtr, Cronet_EngineParamsPtr);
Cronet_RESULT Cronet_Engine_Shutdown(Cronet_EnginePtr);
bool Cronet_Engine_StartNetLogToFile(Cronet_EnginePtr, Cronet_String, bool);
void Cronet_Engine_StopNetLog(Cronet_EnginePtr);
Cronet_String Cronet_Engine_GetVersionString(Cronet_EnginePtr);
Cronet_String Cronet_Engine_GetDefaultUserAgent(Cronet_EnginePtr);
typedef void (*Cronet_Runnable_RunFunc)(Cronet_RunnablePtr);
void Cronet_Runnable_Run(Cronet_RunnablePtr);
void Cronet_Runnable_Destroy(Cronet_RunnablePtr);
typedef void (*Cronet_Executor_ExecuteFunc)(Cronet_ExecutorPtr, Cronet_RunnablePtr);
Cronet_ExecutorPtr Cronet_Executor_CreateWith(Cronet_Executor_ExecuteFunc);
void Cronet_Executor_Destroy(Cronet_ExecutorPtr);
void Cronet_Executor_SetClientContext(Cronet_ExecutorPtr, Cronet_ClientContext);
Cronet_ClientContext Cronet_Executor_GetClientContext(Cronet_ExecutorPtr);
typedef void (*Cronet_UrlRequestCallback_OnRedirectReceivedFunc)(
    Cronet_UrlRequestCallbackPtr, Cronet_UrlRequestPtr, Cronet_UrlResponseInfoPtr, Cronet_String);
typedef void (*Cronet_UrlRequestCallback_OnResponseStartedFunc)(
    Cronet_UrlRequestCallbackPtr, Cronet_UrlRequestPtr, Cronet_UrlResponseInfoPtr);
typedef void (*Cronet_UrlRequestCallback_OnReadCompletedFunc)(
    Cronet_UrlRequestCallbackPtr, Cronet_UrlRequestPtr, Cronet_UrlResponseInfoPtr,
    Cronet_BufferPtr, uint64_t);
typedef void (*Cronet_UrlRequestCallback_OnSucceededFunc)(
    Cronet_UrlRequestCallbackPtr, Cronet_UrlRequestPtr, Cronet_UrlResponseInfoPtr);
typedef void (*Cronet_UrlRequestCallback_OnFailedFunc)(
    Cronet_UrlRequestCallbackPtr, Cronet_UrlRequestPtr, Cronet_UrlResponseInfoPtr, Cronet_ErrorPtr);
typedef void (*Cronet_UrlRequestCallback_OnCanceledFunc)(
    Cronet_UrlRequestCallbackPtr, Cronet_UrlRequestPtr, Cronet_UrlResponseInfoPtr);
Cronet_UrlRequestCallbackPtr Cronet_UrlRequestCallback_CreateWith(
    Cronet_UrlRequestCallback_OnRedirectReceivedFunc,
    Cronet_UrlRequestCallback_OnResponseStartedFunc,
    Cronet_UrlRequestCallback_OnReadCompletedFunc,
    Cronet_UrlRequestCallback_OnSucceededFunc,
    Cronet_UrlRequestCallback_OnFailedFunc,
    Cronet_UrlRequestCallback_OnCanceledFunc);
void Cronet_UrlRequestCallback_Destroy(Cronet_UrlRequestCallbackPtr);
void Cronet_UrlRequestCallback_SetClientContext(Cronet_UrlRequestCallbackPtr, Cronet_ClientContext);
Cronet_ClientContext Cronet_UrlRequestCallback_GetClientContext(Cronet_UrlRequestCallbackPtr);
void Cronet_UploadDataSink_OnReadSucceeded(Cronet_UploadDataSinkPtr, uint64_t, bool);
void Cronet_UploadDataSink_OnReadError(Cronet_UploadDataSinkPtr, Cronet_String);
void Cronet_UploadDataSink_OnRewindSucceeded(Cronet_UploadDataSinkPtr);
void Cronet_UploadDataSink_OnRewindError(Cronet_UploadDataSinkPtr, Cronet_String);