crates/cronet-sys/src/bindings_pinned.rs

pub type Cronet_BufferCallback_OnDestroyFunc = ::core::option::Option<
    unsafe extern "C" fn(self_: Cronet_BufferCallbackPtr, buffer: Cronet_BufferPtr),
>;
unsafe extern "C" {
    pub fn Cronet_BufferCallback_CreateWith(
        OnDestroyFunc: Cronet_BufferCallback_OnDestroyFunc,
    ) -> Cronet_BufferCallbackPtr;
}
unsafe extern "C" {
    pub fn Cronet_Runnable_Destroy(self_: Cronet_RunnablePtr);
}
unsafe extern "C" {
    pub fn Cronet_Runnable_SetClientContext(
        self_: Cronet_RunnablePtr,
        client_context: Cronet_ClientContext,
    );
}
unsafe extern "C" {
    pub fn Cronet_Runnable_GetClientContext(self_: Cronet_RunnablePtr) -> Cronet_ClientContext;
}
unsafe extern "C" {
    pub fn Cronet_Runnable_Run(self_: Cronet_RunnablePtr);
}
pub type Cronet_Runnable_RunFunc =
    ::core::option::Option<unsafe extern "C" fn(self_: Cronet_RunnablePtr)>;
unsafe extern "C" {
    pub fn Cronet_Runnable_CreateWith(RunFunc: Cronet_Runnable_RunFunc) -> Cronet_RunnablePtr;
}
unsafe extern "C" {
    pub fn Cronet_Executor_Destroy(self_: Cronet_ExecutorPtr);
}
unsafe extern "C" {
    pub fn Cronet_Executor_SetClientContext(
        self_: Cronet_ExecutorPtr,
        client_context: Cronet_ClientContext,
    );
}
unsafe extern "C" {
    pub fn Cronet_Executor_GetClientContext(self_: Cronet_ExecutorPtr) -> Cronet_ClientContext;
}
unsafe extern "C" {
    pub fn Cronet_Executor_Execute(self_: Cronet_ExecutorPtr, command: Cronet_RunnablePtr);
}
pub type Cronet_Executor_ExecuteFunc = ::core::option::Option<
    unsafe extern "C" fn(self_: Cronet_ExecutorPtr, command: Cronet_RunnablePtr),
>;
unsafe extern "C" {
    pub fn Cronet_Executor_CreateWith(
        ExecuteFunc: Cronet_Executor_ExecuteFunc,
    ) -> Cronet_ExecutorPtr;
}
unsafe extern "C" {
    pub fn Cronet_Engine_Create() -> Cronet_EnginePtr;
}
unsafe extern "C" {
    pub fn Cronet_Engine_Destroy(self_: Cronet_EnginePtr);
}
unsafe extern "C" {
    pub fn Cronet_Engine_SetClientContext(
        self_: Cronet_EnginePtr,
        client_context: Cronet_ClientContext,
    );
}
unsafe extern "C" {
    pub fn Cronet_Engine_GetClientContext(self_: Cronet_EnginePtr) -> Cronet_ClientContext;
}
unsafe extern "C" {
    pub fn Cronet_Engine_StartWithParams(
        self_: Cronet_EnginePtr,
        params: Cronet_EngineParamsPtr,
    ) -> Cronet_RESULT;
}
unsafe extern "C" {
    pub fn Cronet_Engine_StartNetLogToFile(
        self_: Cronet_EnginePtr,
        file_name: Cronet_String,
        log_all: bool,
    ) -> bool;
}
unsafe extern "C" {
    pub fn Cronet_Engine_StopNetLog(self_: Cronet_EnginePtr);
}
unsafe extern "C" {
    pub fn Cronet_Engine_Shutdown(self_: Cronet_EnginePtr) -> Cronet_RESULT;
}
unsafe extern "C" {
    pub fn Cronet_Engine_GetVersionString(self_: Cronet_EnginePtr) -> Cronet_String;
}
unsafe extern "C" {
    pub fn Cronet_Engine_GetDefaultUserAgent(self_: Cronet_EnginePtr) -> Cronet_String;
}
unsafe extern "C" {
    pub fn Cronet_Engine_AddRequestFinishedListener(
        self_: Cronet_EnginePtr,
        listener: Cronet_RequestFinishedInfoListenerPtr,
        executor: Cronet_ExecutorPtr,
    );
}
unsafe extern "C" {
    pub fn Cronet_Engine_RemoveRequestFinishedListener(
        self_: Cronet_EnginePtr,
        listener: Cronet_RequestFinishedInfoListenerPtr,
    );
}
pub type Cronet_Engine_StartWithParamsFunc = ::core::option::Option<
    unsafe extern "C" fn(self_: Cronet_EnginePtr, params: Cronet_EngineParamsPtr) -> Cronet_RESULT,
>;
pub type Cronet_Engine_StartNetLogToFileFunc = ::core::option::Option<
    unsafe extern "C" fn(self_: Cronet_EnginePtr, file_name: Cronet_String, log_all: bool) -> bool,
>;
pub type Cronet_Engine_StopNetLogFunc =
    ::core::option::Option<unsafe extern "C" fn(self_: Cronet_EnginePtr)>;
pub type Cronet_Engine_ShutdownFunc =
    ::core::option::Option<unsafe extern "C" fn(self_: Cronet_EnginePtr) -> Cronet_RESULT>;
pub type Cronet_Engine_GetVersionStringFunc =
    ::core::option::Option<unsafe extern "C" fn(self_: Cronet_EnginePtr) -> Cronet_String>;
pub type Cronet_Engine_GetDefaultUserAgentFunc =
    ::core::option::Option<unsafe extern "C" fn(self_: Cronet_EnginePtr) -> Cronet_String>;
pub type Cronet_Engine_AddRequestFinishedListenerFunc = ::core::option::Option<
    unsafe extern "C" fn(
        self_: Cronet_EnginePtr,
        listener: Cronet_RequestFinishedInfoListenerPtr,
        executor: Cronet_ExecutorPtr,
    ),
>;
pub type Cronet_Engine_RemoveRequestFinishedListenerFunc = ::core::option::Option<
    unsafe extern "C" fn(self_: Cronet_EnginePtr, listener: Cronet_RequestFinishedInfoListenerPtr),
>;
unsafe extern "C" {
    pub fn Cronet_Engine_CreateWith(
        StartWithParamsFunc: Cronet_Engine_StartWithParamsFunc,
        StartNetLogToFileFunc: Cronet_Engine_StartNetLogToFileFunc,
        StopNetLogFunc: Cronet_Engine_StopNetLogFunc,
        ShutdownFunc: Cronet_Engine_ShutdownFunc,
        GetVersionStringFunc: Cronet_Engine_GetVersionStringFunc,
        GetDefaultUserAgentFunc: Cronet_Engine_GetDefaultUserAgentFunc,
        AddRequestFinishedListenerFunc: Cronet_Engine_AddRequestFinishedListenerFunc,
        RemoveRequestFinishedListenerFunc: Cronet_Engine_RemoveRequestFinishedListenerFunc,
    ) -> Cronet_EnginePtr;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestStatusListener_Destroy(self_: Cronet_UrlRequestStatusListenerPtr);
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestStatusListener_SetClientContext(
        self_: Cronet_UrlRequestStatusListenerPtr,
        client_context: Cronet_ClientContext,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestStatusListener_GetClientContext(
        self_: Cronet_UrlRequestStatusListenerPtr,
    ) -> Cronet_ClientContext;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestStatusListener_OnStatus(
        self_: Cronet_UrlRequestStatusListenerPtr,
        status: Cronet_UrlRequestStatusListener_Status,
    );
}
pub type Cronet_UrlRequestStatusListener_OnStatusFunc = ::core::option::Option<
    unsafe extern "C" fn(
        self_: Cronet_UrlRequestStatusListenerPtr,
        status: Cronet_UrlRequestStatusListener_Status,
    ),
>;
unsafe extern "C" {
    pub fn Cronet_UrlRequestStatusListener_CreateWith(
        OnStatusFunc: Cronet_UrlRequestStatusListener_OnStatusFunc,
    ) -> Cronet_UrlRequestStatusListenerPtr;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestCallback_Destroy(self_: Cronet_UrlRequestCallbackPtr);
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestCallback_SetClientContext(
        self_: Cronet_UrlRequestCallbackPtr,
        client_context: Cronet_ClientContext,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestCallback_GetClientContext(
        self_: Cronet_UrlRequestCallbackPtr,
    ) -> Cronet_ClientContext;
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestCallback_OnRedirectReceived(
        self_: Cronet_UrlRequestCallbackPtr,
        request: Cronet_UrlRequestPtr,
        info: Cronet_UrlResponseInfoPtr,
        new_location_url: Cronet_String,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestCallback_OnResponseStarted(
        self_: Cronet_UrlRequestCallbackPtr,
        request: Cronet_UrlRequestPtr,
        info: Cronet_UrlResponseInfoPtr,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestCallback_OnReadCompleted(
        self_: Cronet_UrlRequestCallbackPtr,
        request: Cronet_UrlRequestPtr,
        info: Cronet_UrlResponseInfoPtr,
        buffer: Cronet_BufferPtr,
        bytes_read: u64,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestCallback_OnSucceeded(
        self_: Cronet_UrlRequestCallbackPtr,
        request: Cronet_UrlRequestPtr,
        info: Cronet_UrlResponseInfoPtr,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestCallback_OnFailed(
        self_: Cronet_UrlRequestCallbackPtr,
        request: Cronet_UrlRequestPtr,
        info: Cronet_UrlResponseInfoPtr,
        error: Cronet_ErrorPtr,
    );
}
unsafe extern "C" {
    pub fn Cronet_UrlRequestCallback_OnCanceled(
        self_: Cronet_UrlRequestCallbackPtr,
        request: Cronet_UrlRequestPtr,
        info: Cronet_UrlResponseInfoPtr,
    );
}
pub type Cronet_UrlRequestCallback_OnRedirectReceivedFunc = ::core::option::Option<
    unsafe extern "C" fn(
        self_: Cronet_UrlRequestCallbackPtr,
        request: Cronet_UrlRequestPtr,
        info: Cronet_UrlResponseInfoPtr,
        new_location_url: Cronet_String,
    ),
>;
pub type Cronet_UrlRequestCallback_OnResponseStartedFunc = ::core::option::Option<
    unsafe extern "C" fn(
        self_: Cronet_UrlRequestCallbackPtr,
        request: Cronet_UrlRequestPtr,
        info: Cronet_UrlResponseInfoPtr,
    ),
>;
pub type Cronet_UrlRequestCallback_OnReadCompletedFunc = ::core::option::Option<
    unsafe extern "C" fn(
        self_: Cronet_UrlRequestCallbackPtr,
        request: Cronet_UrlRequestPtr,
        info: Cronet_UrlResponseInfoPtr,
        buffer: Cronet_BufferPtr,
        bytes_read: u64,
    ),
>;
pub type Cronet_UrlRequestCallback_OnSucceededFunc = ::core::option::Option<
    unsafe extern "C" fn(
        self_: Cronet_UrlRequestCallbackPtr,
        request: Cronet_UrlRequestPtr,
        info: Cronet_UrlResponseInfoPtr,
    ),
>;
pub type Cronet_UrlRequestCallback_OnFailedFunc = ::core::option::Option<
    unsafe extern "C" fn(
        self_: Cronet_UrlRequestCallbackPtr,
        request: Cronet_UrlRequestPtr,
        info: Cronet_UrlResponseInfoPtr,
        error: Cronet_ErrorPtr,
    ),
>;
pub type Cronet_UrlRequestCallback_OnCanceledFunc = ::core::option::Option<
    unsafe extern "C" fn(
        self_: Cronet_UrlRequestCallbackPtr,
        request: Cronet_UrlRequestPtr,
        info: Cronet_UrlResponseInfoPtr,
    ),
>;
unsafe extern "C" {
    pub fn Cronet_UrlRequestCallback_CreateWith(
        OnRedirectReceivedFunc: Cronet_UrlRequestCallback_OnRedirectReceivedFunc,
        OnResponseStartedFunc: Cronet_UrlRequestCallback_OnResponseStartedFunc,
        OnReadCompletedFunc: Cronet_UrlRequestCallback_OnReadCompletedFunc,
        OnSucceededFunc: Cronet_UrlRequestCallback_OnSucceededFunc,
        OnFailedFunc: Cronet_UrlRequestCallback_OnFailedFunc,
        OnCanceledFunc: Cronet_UrlRequestCallback_OnCanceledFunc,
    ) -> Cronet_UrlRequestCallbackPtr;
}
unsafe extern "C" {
    pub fn Cronet_UploadDataSink_Create() -> Cronet_UploadDataSinkPtr;
}
unsafe extern "C" {
    pub fn Cronet_UploadDataSink_Destroy(self_: Cronet_UploadDataSinkPtr);
}
unsafe extern "C" {
    pub fn Cronet_UploadDataSink_SetClientContext(
        self_: Cronet_UploadDataSinkPtr,
        client_context: Cronet_ClientContext,
    );
}
unsafe extern "C" {
    pub fn Cronet_UploadDataSink_GetClientContext(
        self_: Cronet_UploadDataSinkPtr,
    ) -> Cronet_ClientContext;
}
unsafe extern "C" {
    pub fn Cronet_UploadDataSink_OnReadSucceeded(
        self_: Cronet_UploadDataSinkPtr,
        bytes_read: u64,
        final_chunk: bool,
    );
}
unsafe extern "C" {
    pub fn Cronet_UploadDataSink_OnReadError(
        self_: Cronet_UploadDataSinkPtr,
        error_message: Cronet_String,
    );
}
unsafe extern "C" {
    pub fn Cronet_UploadDataSink_OnRewindSucceeded(self_: Cronet_UploadDataSinkPtr);
}
unsafe extern "C" {
    pub fn Cronet_UploadDataSink_OnRewindError(
        self_: Cronet_UploadDataSinkPtr,
        error_message: Cronet_String,
    );
}
